fix scrollbar + font form

--- a/assets/CSS/base.css
+++ b/assets/CSS/base.css
@@ -14,8 +14,26 @@
     margin: 0;
     box-sizing: border-box;    
 }
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
 
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgb(149, 147, 147);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 html {
+    /* scrollbar-width: thin; */
     scroll-behavior: smooth !important;
     font-family: Helvetica, Arial, sans-serif;
 }
