--- a/form/css/paymentRoom.css
+++ b/form/css/paymentRoom.css
@@ -1,32 +1,3 @@
-:root {
-    --backgroundColor: #F9B456;
-}
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-html {
-    scroll-behavior: smooth;
-}
-
-/* font face */
-@font-face {
-    font-family: UTM-Aptima;
-    src: url(../../assets/fonts/font-text/UTM\ Aptima.ttf);
-}
-@font-face {
-    font-family: utm-bell;
-    src: url(../../assets/fonts/font-text/UTM\ Bell.ttf);
-}
-@font-face {
-    font-family: nexa;
-    src: url(../../assets/fonts/font-text/SVN-Nexa\ Light.ttf);
-}
-@font-face {
-    font-family: uvn-bale;
-    src: url(../../assets/fonts/font-text/UVNBaLe.TTF);
-}
 .modal-payment.open {
     display: flex;
 }
@@ -42,7 +13,7 @@ html {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 100;
-    font-family: nexa;
+    font-family: arimo;
 }
 
 .modal-payment-container {
@@ -53,7 +24,6 @@ html {
     min-height: 200px;
     background: rgb(241, 239, 239);
     border-radius: 20px;
-    /* animation: dropdown ease 0.7s; */
 }
 .modal-header.payment{
     position: relative;
@@ -107,7 +77,7 @@ html {
 .total-payment {
     display: flex;
     color: var(--color-blue);
-    font-family: UTM-Aptima;
+    font-family: arimo;
     justify-content: right;
     font-size: 18px;
     font-weight: 700;
