--- a/form/css/registerRoom.css
+++ b/form/css/registerRoom.css
@@ -57,7 +57,7 @@
 
 .modal-body .title {
     margin-left: 20px;
-    font-family: nexa;
+    font-family: arimo;
     font-weight: 600;
 }
 
@@ -68,14 +68,14 @@
 .modal-body .infor-item label {
     flex: 0.3;
     font-size: 0.9rem;
-    font-family: nexa;
+    font-family: play fair;
     font-weight: 600;
 }
 .modal-body .infor-item select,
 .modal-body .infor-item input {
     flex: 1;
     font-size: small;
-    font-family: nexa;
+    font-family: arimo;
     padding-left: 10px;
     border-radius: 5px;
     border: 1px solid var(--color-blue);
